--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,14 @@ cache:
     - $HOME/.composer/cache
 
 before_install:
+  - phpenv config-rm xdebug.ini || return 0
   - travis_retry composer self-update
 
 install:
   - if [[ $setup = 'stable' ]]; then travis_retry composer update --prefer-dist --no-interaction --prefer-stable --no-suggest; fi
   - if [[ $setup = 'lowest' ]]; then travis_retry composer update --prefer-dist --no-interaction --prefer-lowest --prefer-stable --no-suggest; fi
 
-script: vendor/bin/phpunit
+script:
+  - composer validate --strict --no-check-lock
+  - ./vendor/bin/php-cs-fixer fix . -v --dry-run --using-cache=no
+  - ./vendor/bin/phpunit
