--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,12 @@
     ],
     "require": {
         "php": "^7.1",
-        "ramsey/uuid": "^3.8"
+        "ramsey/uuid": "^3.9"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.5|^4.0",
-        "phpunit/phpunit": "^7.0|^8.0",
-        "friendsofphp/php-cs-fixer": "^2.14"
+        "orchestra/testbench": "^3.5 || ^4.0 || ^5.0",
+        "phpunit/phpunit": "^7.0 || ^8.0 || ^9.0",
+        "friendsofphp/php-cs-fixer": "^2.16"
     },
     "autoload": {
         "psr-4": {
