--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "require": {
         "php": "^7.1",
-        "ramsey/uuid": "^3.9"
+        "ramsey/uuid": "^3.9 || ^4.0"
     },
     "require-dev": {
         "orchestra/testbench": "^3.5 || ^4.0 || ^5.0",
