--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "ramsey/uuid": "^3.9 || ^4.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.5 || ^4.0 || ^5.0",
+        "orchestra/testbench": "^3.5 || ^4.0 || ^5.0 || ^6.0",
         "phpunit/phpunit": "^7.0 || ^8.0 || ^9.0",
         "friendsofphp/php-cs-fixer": "^2.16"
     },
